--- a/add_word_window_1.ui
+++ b/add_word_window_1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>253</width>
-    <height>144</height>
+    <width>297</width>
+    <height>131</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,13 +40,13 @@
      <widget class="QFrame" name="frame">
       <property name="minimumSize">
        <size>
-        <width>231</width>
+        <width>275</width>
         <height>52</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>245</width>
+        <width>275</width>
         <height>52</height>
        </size>
       </property>
@@ -64,6 +64,13 @@
         <widget class="QPushButton" name="adding_pushButton">
          <property name="text">
           <string>Add</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="add_multiple">
+         <property name="text">
+          <string>Add Multiple</string>
          </property>
         </widget>
        </item>
