--- a/remember_words_gui_template_1.ui
+++ b/remember_words_gui_template_1.ui
@@ -6,17 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>291</width>
-    <height>343</height>
+    <width>269</width>
+    <height>320</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Remember Words</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">MainWindow{
+background:
+}
+
+QLineEdit{
+border: 1px solid rgb(0,0,0);
+}</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -25,6 +43,15 @@
       </property>
       <item>
        <widget class="QPushButton" name="add_word_button">
+        <property name="minimumSize">
+         <size>
+          <width>75</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
         <property name="text">
          <string>Add</string>
         </property>
@@ -32,6 +59,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="remove_word_button">
+        <property name="minimumSize">
+         <size>
+          <width>75</width>
+          <height>25</height>
+         </size>
+        </property>
         <property name="text">
          <string>Remove</string>
         </property>
@@ -69,14 +102,18 @@
         <pointsize>9</pointsize>
        </font>
       </property>
-      <property name="resizeMode">
-       <enum>QListView::Fixed</enum>
+      <property name="styleSheet">
+       <string notr="true">QListView{
+background:rgb(245, 242, 235)
+}
+
+</string>
       </property>
-      <property name="gridSize">
-       <size>
-        <width>0</width>
-        <height>38</height>
-       </size>
+      <property name="verticalScrollMode">
+       <enum>QAbstractItemView::ScrollPerItem</enum>
+      </property>
+      <property name="resizeMode">
+       <enum>QListView::Adjust</enum>
       </property>
      </widget>
     </item>
@@ -87,7 +124,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>291</width>
+     <width>269</width>
      <height>26</height>
     </rect>
    </property>
@@ -97,6 +134,7 @@
     </property>
     <addaction name="actionSettings"/>
     <addaction name="actionDownload_Database"/>
+    <addaction name="actionUpload_Database"/>
    </widget>
    <addaction name="menuOptions"/>
   </widget>
@@ -108,6 +146,11 @@
   <action name="actionDownload_Database">
    <property name="text">
     <string>Download Database</string>
+   </property>
+  </action>
+  <action name="actionUpload_Database">
+   <property name="text">
+    <string>Upload Database</string>
    </property>
   </action>
  </widget>
